# esp32p4-eez-studio-lvgl

./: .gitignore  .gitmodules  CMakeLists.txt  import_eez_ui.py
components/eez_framework/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.c
main/eez_ui/: actions.cpp  actions.h  eez-flow.cpp  eez-flow.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  vars.cpp  vars.h
